# ChangeLog for app-admin/mms-agent
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/mms-agent/ChangeLog,v 1.2 2015/03/27 17:27:41 ultrabug Exp $

  27 Mar 2015; Ultrabug <ultrabug@gentoo.org> mms-agent-3.1.0.175_p1.ebuild:
  missing mongodb user creation fix #544548 thx to Toralf Förster

*mms-agent-3.1.0.175_p1 (17 Mar 2015)

  17 Mar 2015; Ultrabug <ultrabug@gentoo.org> +mms-agent-3.1.0.175_p1.ebuild,
  +files/mms-monitoring-agent.initd, +metadata.xml:
  app-admin/mms-agent ebuild
