@@ -2,15 +2,15 @@
 Hash: SHA256
 
 AUX mms-monitoring-agent.initd 720 SHA256 1b7dabf69a8ca8c0e35ff1d1d0ec33f5e3584427f3339264c35ee81f2708769d SHA512 f407400c64e692491e5ce48631fc189cdb2155abe7c2888b02b864a7ba597def0cf7b3a64cd8c8f2b8c2e2cc814ca1ec7a2e36e5b4c25946b0c2421bf06dbb3f WHIRLPOOL a0531aadbc80f36bfc05af78021bcf72323421bd1ba4d505ca6fad8126c57b920b71e011d42d02562606bb9f5501b8893d0bb1bd4245fa2547453e4522d3b2ab
-DIST mongodb-mms-monitoring-agent-3.1.0.175-1.linux_i386.tar.gz 2547796 SHA256 6316d2e4677abe03a5f0c608155fa589f446fff4038995f655c5d38e8505dfee SHA512 5009623abb90df12cb77fa8ea0d56421e7e991f910e1cdf640637eb54b51dd351d84f276e0ae2dd6afc756dbb63cfd8913ed3303ab87895a1318cfcc2e249999 WHIRLPOOL 22a44cbfc6d083dc22a11e2ea42f8fecc973c0b9d8d027ceda90db072a8e031ff70af721c84fdf9dd8b747813f41c64020e7731596d462d432ba60c88370c652
-DIST mongodb-mms-monitoring-agent-3.1.0.175-1.linux_x86_64.tar.gz 2633926 SHA256 fb5cb988dc4cf4da41230068f7f31da53260ee494fd83514402ddf242649e996 SHA512 5ef41473597060f93fe8eaa0414775325f0866d547e042733bb5caa531f4d3dde7e42a9d021a214a96344dc14a2a517cdcdec5100f631e941fa09ed3659580d1 WHIRLPOOL 6c7fe437d63053192a7a691d3ccf662fd6038da24fe3d270aa1454d3c1c6757dca4c9a966ec2a52eb349116f85f18cdae567a8a0dff3e94fc7046da2fc7fe998
-EBUILD mms-agent-3.1.0.175_p1.ebuild 1572 SHA256 2feee56285b9881b9223fbd92ca4b3a3af8ebe0358e595ed71e5bfb1b4158079 SHA512 140db43cd1409a56f7582d2202b2c21aa231423d40dd82edd8ece2bc99ce606ed09e32a39579790a4cc73934e6ed1b1dd4bb7650f3a60c47eaf6ee68ba549db9 WHIRLPOOL f631107ac1d89ee7d7b0740a23bb91481c5157988e991bdf5474be0c666e9c3b1be796142325ee532fee211555dcff52ed8f0111b010efb58092595f2ab05a00
-MISC ChangeLog 557 SHA256 d9bffda426c92310911921e69e71c5feedad74c955454f06875ff699219b83a1 SHA512 f041434e8373f243977215abc3b7e99ecdee82a12e7ef5971501f31519d5d5e4d2d1be1d59a488d9cd649c6ef93fe7a10a1155459cc906d14f6d03b73ac7d363 WHIRLPOOL 1c0edd23cdfb92ab635fd45a484fd31d05c6c456633a6a3852e7a7a021c16dcf4c16e944d9679491e73a62859f859cecdc23bc3c1957deee4ebaef4f6c092406
+DIST mongodb-mms-monitoring-agent-3.2.0.177-1.linux_i386.tar.gz 2551631 SHA256 27d1d36432a5441a1737e0c005ec5ee75f58af12e9e05bba1d29a4a45c756b94 SHA512 2fe6167989b15790f436fc7c832df49a81b4d8d540d18b43a58b22c8706a41736f5d0f0e2cff7a9aac102b8fa7ebabd8d3cd8444c033efabb5b42d7b4bdd3dfc WHIRLPOOL 9b8763f41d7104ab770da58de66b650fe7322af8bf97842bbf0355d2f6b4f83cd070b086980fb58a3bb2e2373aa845ad22df530646591b67c7e603656d9dbcd1
+DIST mongodb-mms-monitoring-agent-3.2.0.177-1.linux_x86_64.tar.gz 2638452 SHA256 a6fbae544589082a777209dc3333473248fdbc3c432a729839346f76fef392ae SHA512 c6521d05bf82abdff94c26882bf21e05c5fafa97dbe11166b72cfbc0a1ef94728fd808d52919970e4bfce5c75a64501631bd974b9f78c02c0a415c56950a045a WHIRLPOOL 4172e149b71a463c62b089e95fe71ebbdef112a3159105ac61777d0dd6ed5212f9a3967199e0c9a19721e7994147edf6cfaea736e732863d6b2b4ceafff106c2
+EBUILD mms-agent-3.2.0.177_p1.ebuild 1577 SHA256 fda5a19d9b7f1ceeeaf03304911efd1fd1cd048215cf99403e38f2d8f730110f SHA512 6672c1cd992909ee945112613b90f70681bf30f450b2d5402988eae344970e169ddde2859a39d92c77933a37ea69dba17c16a3bb9ab0e9ad9132dc17bdd1709b WHIRLPOOL 99fa05f001cc302346c90928971187111f7d909ffa57db236243a60343ddb97f73f6a5d9627a79b2afa15c97e27e30d74b8d88b0eb275b8d8145ec5d5cf66f92
+MISC ChangeLog 724 SHA256 0643ba19738a2e4a7faba4d3866f10c3f4fe94de94f918f82f02265b70cf0645 SHA512 578eed8972a3c9a4c04ddac5b5a7a676aa8d3901e00c6b8dc180b34b6acfe56de7367c37e8832fa28a0ba8bb53d1fcc51354ec9c48213e4ab2f3c5cf379179bf WHIRLPOOL eed4ce8c66640b98fd46bfce6cb59add53fc185fa68b14ea2051d2eb5afcc73240d671485016ba78089c28cd634b3b27d129b0935da52800bd56a8611201eec8
 MISC metadata.xml 579 SHA256 4eb5e4cd7f2fbd47621a7f77bb0a6ee0e3a6aa6eb57ba079f8704df17249472f SHA512 0b4318c4cd5958a74b24b660888f26e43ba5666ab8c4349d11b8da85255d39c8fe7b476c90be0eb31ae5c13ab783c76421176d26e63c09bc6176df3a62335dc8 WHIRLPOOL 0a5d1e7dbf60d130ef28be028a5901ab3f2f2a5e1324b54bb023e9f7127b737c3b36fe76baf57c93df8a769331d14b7a26aff98975f92aa621b3fc8f54cb5541
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlUVkxIACgkQKiQSS7ZY+hNVJgD/aXjsB3SPpw6SjXKUHloWKpnJ
-K1P0BOz+Kr+qT50/OKYA/jp/RcZztmYZYvXwMhva1ARM4NLfCiKcMqC1Et1gPwUO
-=VtVG
+iF4EAREIAAYFAlUuktAACgkQKiQSS7ZY+hM2FAEA5AjY3jgFXEiWzKmZjtkLC/aY
+zhBuQ8iB23poo8elw1gBAKLoTL6EJaHeuruAnaL7pNirIKpllSKdOdQYbYBaqnbm
+=Luxt
 -----END PGP SIGNATURE-----
