@@ -1,10 +1,10 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/mms-agent/mms-agent-3.1.0.175_p1.ebuild,v 1.2 2015/03/27 17:27:41 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/mms-agent/mms-agent-3.2.0.177_p1.ebuild,v 1.1 2015/04/15 16:33:15 ultrabug Exp $
 
 EAPI=5
 
-inherit eutils
+inherit eutils user
 
 MY_PV=${PV/_p/-}
 
