@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare unpack
+DEPEND=dev-libs/popt sys-apps/iproute2 dev-libs/libnl dev-libs/openssl snmp? ( net-analyzer/net-snmp ) >=sys-kernel/linux-headers-2.6.30 !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
+DESCRIPTION=A strong & robust keepalive facility to the Linux Virtual Server project
+EAPI=4
+HOMEPAGE=http://www.keepalived.org/
+IUSE=debug ipv6 snmp
+KEYWORDS=~alpha ~amd64 ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sparc ~x86
+LICENSE=GPL-2
+RDEPEND=dev-libs/popt sys-apps/iproute2 dev-libs/libnl dev-libs/openssl snmp? ( net-analyzer/net-snmp )
+SLOT=0
+SRC_URI=http://www.keepalived.org/software/keepalived-1.2.16.tar.gz
+_eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	base	87f7447ccfc06fd0729ff4684e11e0d6	eutils	9fb270e417e0e83d64ca52586c4a79de	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
+_md5_=b19fc338de2878dc21f597346d517280
