@@ -13,6 +13,7 @@ AUX keepalived.init 912 SHA256 44fe841fa059c8d9a02f9f9b6d3dd6d12bcc42f83ed818795
 DIST keepalived-1.2.12.tar.gz 337974 SHA256 7cd5b1c44b9ec805bb70d208db5962f2c2ff42798c2efd10c6f92e263cf549ab SHA512 816d5a4e8aa65bd9509f68290b762e67feac235678e0960d8c80ee81cb1b3f16311c17ca5e885f87d5d4698df8cb6c42b19ebdc9f43be125dffaf31e68ef67be WHIRLPOOL 26d7901ec5baefd851209b080dadb439bb275df325f567aa37a0951d3849275efc46f6e0c3f0649241e674633bd92f08663c6cec93203800ba0575ef4c100ac5
 DIST keepalived-1.2.13.tar.gz 341956 SHA256 051c4acea94cc813dc020da7414d5461f09811a67242750d69e9f9e356706fce SHA512 f609d4b315cb336cee8bdac3e900ff77ad00fa1fbbfa2981c78475a8243e816b53858651de8af66e12d7d160e290207026d5f2077a7a08bfd04c644f99b5a4f7 WHIRLPOOL 033d6662b0b73bb65a4ee1172fd5c02b3966849e227a900838d88dd64c32c2860dad1f3cd0cb56fa1657b0eaa52f3137863bded12b0294427722fcc77b94d80f
 DIST keepalived-1.2.15.tar.gz 345471 SHA256 47db44d78549da704e0794198bfc874be65ca570d15429a6a5c23b8d91109aa9 SHA512 f640e3f2694d359ebb24addb55c48c9ca877fa64daac5e73b4a251bf2a531705a8e02a34d7ee95cd96ad70a282c96f5102d3ce4baa2be90e6df2c8d910551b78 WHIRLPOOL 3273e2d1cdaf8c5ca468e536472c6c781ed4cf78035b559f68693b935eeae04b28204f51e983d9066f294f63dbb05b9d8d77f8c7cb647c77abbd99c6a8f65561
+DIST keepalived-1.2.16.tar.gz 346920 SHA256 5c4f444697374f2de14e7c74c56e28a212047050abbb3e66439534a5516b3665 SHA512 60aaad164dab07ebf842eb5e9b0406ea8c777788cdc98abb5038093cfce6c35567bf975881e9fb002c9bbb219250e65e1450534edd0f5fef277aeb92b47874f0 WHIRLPOOL 0d9dc2538c9e466bab6f6377d1f9954292ad31332d3f84415fc0f4acb44f4f7984e6d06dc5e2a3e45b81f91036240d43f81dc5607b3761bb16263c741a49c910
 DIST keepalived-1.2.2.tar.gz 249557 SHA256 4c05dbd149af120506b4f3a66b4016e30d9ad112e4c26a602e28c366705de8c0 SHA512 1ac581c94be846822ef0ea7f3d2084b4a64ebc2cf77f9e41248169daa3319adcdeb8bd2bef2b3ce6630ae620f4b2ab7e9e949881d7efcc3d359004f0ff316ae8 WHIRLPOOL 13ad7a3f97619951f40dd3a7e43253d218b8bb9515c4b9c551125df2d6d6fe1cbf2761e88b54733498adf782aeae10f55ee267c58c297f1765fa86939edc1a00
 DIST keepalived-1.2.7.tar.gz 289380 SHA256 ca345bf706c090574f6c661bb0abc4b53ccd1480a37c53a05de2eceba6573bda SHA512 5919d23ff911825198daa0fe469c408f9236f6ef4ce406cf4590923f01093f6bc4fa9c6c1768605a760fc7858637d98aaef9e0bd408295f9b88acdfbe9bab9ed WHIRLPOOL 284579d9a5c4361bae1d3a3ff451706c4972fef903fbf0411ab7df50fef1794e0a56b6c4641840cf77f83e2c1d728cc9b843a8b12df450bfa10059f918eb3d8e
 DIST keepalived-1.2.9.tar.gz 330779 SHA256 fb711dacce95b60eee18f2b89938a9fbebc5096022f17850fd2284f207e41d9d SHA512 042c2b43c6f71d89d510b3514c8110e6057eb7b01d566f4c39a45131e79b12d8376dc6b330b1f0339e8a49507cc8b112e61a98f46116ce7c6d859d05b4d8d717 WHIRLPOOL 255887a26f9c561f9229961c835edf3e22563def594ce55af6d81105db5512ea31484efbfc0fb77234368f55bbbb4994edecf6b00af8399c3fc10f6903e1b6d2
@@ -20,25 +21,16 @@ DIST keepalived_1.2.2-3.diff.gz 9856 SHA256 104213b98e80c5de7c04ff0a409b88c6aad3
 EBUILD keepalived-1.2.12-r1.ebuild 1640 SHA256 f7517cf93a96ed84c984e3a3e471ee5be556f97b48894ecc46eaf04cd622983d SHA512 b82e7c07e51b4a3453a06ab7467104f2b10c8b6ce080cd4f26d3631809962b2832a63ff809bf5217d1ba5b6ef6fce36d819c0a83f9d100d68c868c91f284d8d8 WHIRLPOOL 7ddc184307b33840cbac7bbfe30df32d197464f93eca44000b06c6e1156e4a39e1ea63ce9e12b7d089f0af438e3d2c34380b90f11b0e86b84121990751e75152
 EBUILD keepalived-1.2.13.ebuild 1624 SHA256 d1d693ae465da7206c3066e545cfd9f556e5f467bb15362a7fdd4341bdc2097e SHA512 8af2c1a2a3837d4273d7dc81842479b96e36b9c9c20e6325908136777b66f5b4dd6cc6aecae831cfa0b2b0f72294f8398028da5305ab03f656608129f89afc1a WHIRLPOOL 6a8b55f54f8b7ccd5a8f9aa73337f0b906389131183b7c8874e2b8ed4e15a4cdfccf4409094e91604e8b41069e8074a6066c27a43d9d43dea89e0679fa98f5e5
 EBUILD keepalived-1.2.15.ebuild 1625 SHA256 2f891bf8ae234da6633585b1a6efdf9b1576842f1420d8da9f0162a2ee923457 SHA512 267c1a897ea25a339fbfb6e3951e64cd0c701cea0695db21508fc6d400d614b42894721ff00e99410439bbe08a570c0cde08e38ab8e2647e3f458c4499114d39 WHIRLPOOL 2bd8fb852fb29b152726ad84d38582b0406bc9e3903fe6497d9d2da2db2e3854488ff5ce85e7c8f62169cab1c69c1e2373e9d8feab9877b40ec886930f7fe884
+EBUILD keepalived-1.2.16.ebuild 1637 SHA256 76b1996c2916ff3d5385ae8e0a061bbe4941abbb02388ec91256eab0f4af1635 SHA512 846173e4e5d0cb473e5f697e7dc438e1d4fef4ac09d0a48475f6b16ba86a80520efbe8066df4c84cc5f82c7439181090a8c4949abcd71a0ad7eff2fa5d940fb0 WHIRLPOOL 4df044042b169d4a0a921aa778ab115e93391f675b712b5b5451095885b9ede5f3fc7eeb36573c49ed2ccb30b33c30d05824011d3b565abd2edbd3a0847a9810
 EBUILD keepalived-1.2.2-r4.ebuild 1918 SHA256 0641c5ddd78ad6629f7f62bebaeecd8f2697bb7d8caa9aabb68e1ca1293d0ef5 SHA512 b66fa559cbdcca151aa423c745c4033332fcd35e703ba76a1730de42cc8b4624eabf0550557d537e7e4837fcd6d39542a8540a89a2342cb23dfa59e739fd2d6d WHIRLPOOL 768a7a52074876af5d990992c5632219fed060380a8be0c0b68f48b6c47ad1e6cbe1d4f9f418b08874001bb8810a3090012875e7c3e8eef44aae471db2f51cf9
 EBUILD keepalived-1.2.7-r2.ebuild 1693 SHA256 790b2b24f2f576d679de7d3b4fb5aaf0c8fcca47afd6c18027dfcf03516f1a8a SHA512 46578816ed94401b9e5c51fdec4f1d5f9c640a99d3682ef0bef27caabd8c8b2529edc4ba52e4e8c7088123557a1a6ed96f50e9043ef3f930675e3eb9e0dfe805 WHIRLPOOL 854e74cd2e29fa789309c25ed023eccb715f40d3fffeca085e75ec83344a3cc2f8371049ee201401a7500a81e9b5bf810d15df14822b216d9fbbccde00fc800c
 EBUILD keepalived-1.2.9.ebuild 1683 SHA256 6dfb876b4e6c7a991646d275c6eb7f7b7581b565d02305700f334e025de6b667 SHA512 b9ae3c3882aa894ce8c4c74e8a14aaf80f8d0a73ef89df2087f0c17cce3b1e59c61fa3c02d1e031799ae4d7547f0e36579eff4c665d5111bd22824360ff44096 WHIRLPOOL 1ea26390ced14e4baf008c8414b3a59343754d1d555fe2c6cfb78d60ce370188682b9d66b346dfd0d2a363b962ac29099db595472708329d56a9c5d16fc90dfc
-MISC ChangeLog 19330 SHA256 c8e5ba3aebba174ddd988a89811e609a512c5918a7c9f4a8a9c6d95169592cd2 SHA512 97712fc08a68d990d5d1a13f1882f54e4316cc389401d745ac2ef00241b7ceb6228ee26cacec125141607ea067b36673e13c03c651a406456fe3b13c53d97243 WHIRLPOOL c0ebf7714339fa4c5919b5a9e64d20c72e6936d6494eae088484ea1e53d20c5df2ade489e73b5e2286801fec51fdd61a2800469bccab5a5419491e6b8521b671
+MISC ChangeLog 19470 SHA256 3406c8aad910689a78433b666ac00d56a03262906a7b3ae1a175d125aa09161e SHA512 b76022c1128614f2ae4127e43b8c8cc5070df7e4d6a2a8f92f30693fb9bba2e44a0bc0d6128a9161ba294bb02e82cde2ecdc35cf13976efb1615937b59f3b7c3 WHIRLPOOL 782129416600c664882690a4de05ff4d6c6d6e59417087af63fc7ef4afad349819ee6fe4113d4f7154ce26bf1b40109adbced92fcfc658e694d139668751cf63
 MISC metadata.xml 272 SHA256 7fde2180ebedf6971ce9767ab11e619ca60ade87b6c32b37c8fbf3a5442d56b1 SHA512 bbcd428fe65136185ff53ce0e44802bf65507d1287afe9071f4f967a8c8e5d0ba2c706196a5b7a9f3c040f710d523d8766493824bea2c050111533a485cdcf9a WHIRLPOOL ed96940f240f8e6fc1c4e2bf8d9b2064ade28255ef6238e048b3d80d8f9334b101e19deb5c1f89f83016c042bbc533b7855d02e3e0d19c5e2582d93fe416a80f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVLPOrAAoJELp701BxlEWfAi8P/ibTQsRkxiWqC/mnhz5HkInC
-ro//NxLaFMvSgR8J4aJWpG82kcZpqsRWZ+CDfrqYgIjEbHOCl7EaSE1TJPamlgWQ
-tsgpEvtXK3JJHwQB+q3pp6kCachKAu1jHCvq2B2yRq+cPpgv0eG1aA6o1FeyEItI
-gTJCHN6GLtldeh2klvrUxHaGbhNKL7WGdoMxtKJYaJuVneDs5b7yomaAWkPT7ETe
-ZWt74ZGlddGLCmmQgiTeaVnnWGaixWPdplB6qI9DnXbbqLa9Ry0X6n9OGw5M6eTZ
-4G6m6SoHUjBSa6aENjQtQTlXnbT15t7Yy7ZhMF0ePcf4XF/IBPN7misUEyeVfEFi
-55KCjHTB80AIwsZJbzhhjTOUWyO//YSUEf+2tK+0nWCDGBWCzGlXUnfnK+Tn7QJw
-LBVlfAza/A0DuuVeQepQ48RsrNIQ/N3VgargHKlfrkgMBuz6DjOTWpXm4nsufjlI
-jne6VhLWI7YercoRIAhtlKLpjV+QSJLZz55UL/aUSD/cDG0FWTgnc8t3AFHdtn9m
-Wmydl7Jxn6Vr0WsK9oSTylfzsk721WhyndF24+muHe/wJxjdTs6HBcPLeqSGkf7x
-Xj74Q3A0ewil9pskCTRlsehBuvX+ndfCl6UgVMH0BMJ7yX26kv3qQkHlSMco32oR
-7BESy/zelgvgxiSRK/6d
-=Popp
+iF4EAREIAAYFAlUuk78ACgkQKiQSS7ZY+hObZQEAo94/11RPW1SgiTVl4C4mOii1
+mxvrZ55xiXzcAQ3rKM4A/j/OFaW9n0cpQwrh6rFSfsa8cpWu1PnXDhh//sc2hKK7
+=1E31
 -----END PGP SIGNATURE-----
