@@ -1,6 +1,11 @@
 # ChangeLog for sys-cluster/keepalived
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/keepalived/ChangeLog,v 1.128 2015/04/14 11:02:03 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/keepalived/ChangeLog,v 1.129 2015/04/15 16:37:14 ultrabug Exp $
+
+*keepalived-1.2.16 (15 Apr 2015)
+
+  15 Apr 2015; Ultrabug <ultrabug@gentoo.org> +keepalived-1.2.16.ebuild:
+  version bump fix #545954
 
   14 Apr 2015; Agostino Sarubbo <ago@gentoo.org> keepalived-1.2.15.ebuild:
   Stable for ia64, wrt bug #538792
