@@ -1,6 +1,12 @@
 # ChangeLog for app-admin/mms-agent
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/mms-agent/ChangeLog,v 1.2 2015/03/27 17:27:41 ultrabug Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/mms-agent/ChangeLog,v 1.3 2015/04/15 16:33:15 ultrabug Exp $
+
+*mms-agent-3.2.0.177_p1 (15 Apr 2015)
+
+  15 Apr 2015; Ultrabug <ultrabug@gentoo.org> -mms-agent-3.1.0.175_p1.ebuild,
+  +mms-agent-3.2.0.177_p1.ebuild:
+  version bump
 
   27 Mar 2015; Ultrabug <ultrabug@gentoo.org> mms-agent-3.1.0.175_p1.ebuild:
   missing mongodb user creation fix #544548 thx to Toralf Förster
